--- a/frontend/src/styles/layout/_Text.scss
+++ b/frontend/src/styles/layout/_Text.scss
@@ -10,6 +10,9 @@
         font-size: 0.75rem;
     }
     &--regular {
+        font-size: 0.85rem;
+    }
+    &--default {
         font-size: 1rem;
     }
     &--large {
